name and route change

--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/7fb2b68ee1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='signstyle.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='global.css') }}">
-    <link rel="stylesheet" href="/static/edit_account.css">
+    <link rel="stylesheet" href="/static/css/edit_account.css">
 </head>
 <body>
     <button type="button" class="universal-history-back-button" onclick="window.location.href='\dashboard'" title="Go Back">
