--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/loginstyle.css">
+    <link rel="stylesheet" href="../static/css/login_style.css">
 </head>
 <body>
 
@@ -71,6 +71,6 @@
         </div>
     </div>
     
-    <script src="../static/loginlogic.js"></script>
+    <script src="../static/js/login_logic.js"></script>
 </body>
 </html>
