--- a/templates/machine_learning.html
+++ b/templates/machine_learning.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SignQuest Pose Capture</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/ml_game.css">
+    <link rel="stylesheet" href="/static/css/ml_game.css">
 </head>
 <body>
   <video id="webcam" autoplay playsinline width="320" height="240"></video>
@@ -13,6 +13,6 @@
   <button id="start-btn">Start Pose Capture</button>
   <div id="result"></div>
 
-  <script src="/static/ml_logic.js"></script>
+  <script src="/static/js/ml_logic.js"></script>
 </body>
 </html>
