--- a/templates/ML_game.html
+++ b/templates/ML_game.html
@@ -6,8 +6,8 @@
     <title>SignQuest - ML Practice</title> {/* Changed title */}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='gamestyle.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='ml_game.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/game_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/ml_game.css') }}">
 </head>
 <body>
     <div class="sidebar">
@@ -70,6 +70,6 @@
         </div>
     </div>
     
-    <script src="{{ url_for('static', filename='ml_logic.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ml_logic.js') }}"></script>
 </body>
 </html>
