--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7fb2b68ee1.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='loginstyle.css') }}"> </head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login_style.css') }}"> </head>
 <body>
     <button class="close-button" onclick="window.location.href='/'">×</button>
     <button class="sign-up" onclick="window.location.href='\login'">LOGIN</button>
