--- a/templates/game_page.html
+++ b/templates/game_page.html
@@ -6,7 +6,7 @@
     <title>SignQuest - Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="static/gamestyle.css">
+    <link rel="stylesheet" href="static/css/game_style.css">
 </head>
 <body>
     <div class="sidebar">
@@ -63,6 +63,6 @@
     <audio id="correct-sound" src="{{ url_for('static', filename='sounds/correct.mp3') }}" preload="auto"></audio>
     <audio id="incorrect-sound" src="{{ url_for('static', filename='sounds/incorrect.mp3') }}" preload="auto"></audio>
 
-    <script src="static/gamelogic.js"></script>
+    <script src="static/js/game_logic.js"></script>
 </body>
 </html>
