--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/landing.css">
+    <link rel="stylesheet" href="../static/css/landing.css">
 </head>
 <body>
     <header>
@@ -121,6 +121,6 @@
         <p>&copy; 2025 SignLingo. Making sign language accessible to everyone.</p>
     </footer>
 
-    <script src="../static/landinglogic.js"></script>
+    <script src="../static/js/landing_logic.js"></script>
 </body>
 </html>
