--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/signstyle.css">
+    <link rel="stylesheet" href="../static/css/sign_style.css">
 </head>
 <body>
 
@@ -72,6 +72,6 @@
     </div>
 </div>
 
-<script src="../static/signinlogic.js"></script>
+<script src="../static/js/signin_logic.js"></script>
 </body>
 </html>
