--- a/templates/video_learning.html
+++ b/templates/video_learning.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignQuest - Video Learning</title> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../static/videostyle.css">
+    <link rel="stylesheet" href="../static/css/video_style.css">
 </head>
 <body>
     <div class="sidebar">
@@ -67,6 +67,6 @@
         </div>
     </div>
 
-    <script src="/static/videopage.js" defer></script>
+    <script src="/static/js/video_page.js" defer></script>
 </body>
 </html>
