--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='coursestyle.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/course_style.css') }}">
     <style>
         .leaderboard-container {
             display: flex;
