--- a/templates/users.html
+++ b/templates/users.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Friends</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='coursestyle.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/course_style.css') }}">
     <style>
         .user-list {
             list-style-type: none;
